[tool.poetry]
name = "pysisnoapi"
version = "0.2.2"
description = "Wrapper para API da plataforma SISNO."
authors = ["Vinícius Costa <viniciusccosta95@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
jsonpickle = "^3.0.1"
httpx = "^0.25.0"


[tool.poetry.group.dev.dependencies]
pdoc3 = "^0.10.0"
aiometer = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
